pothole-angular/k8s/service.yaml
# NodePort : accessible depuis la machine hote sans installer d'ingress
# controller, pratique pour la demo/soutenance -> http://localhost:30080
apiVersion: v1
kind: Service
metadata:
  name: pothole-angular
  namespace: parkey
spec:
  type: NodePort
  selector:
    app: pothole-angular
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
